@@ -6,11 +6,11 @@
 // I mean, look at the menu class :P
 
 // Handles a single button
-function button(newX, newY, newMsg) {
-	this.x = newX;
-	this.y = newY;
+function button(newMsg) {
+	this.x = 0;
+	this.y = 0;
 	this.msg = newMsg;
-	this.width = 0;
+	this.width = 75; // make all buttons same width
 	this.padding = 5;
 	this.height = 10 + this.padding * 2; // 10 font + 5 either side padding
 	this.isClicked = 0;
@@ -18,17 +18,23 @@ function button(newX, newY, newMsg) {
 
 	this.draw = draw;
 	this.clicked = clicked;
+	this.load = load;
+
+	function load(newX, newY) {
+		this.x = newX;
+		this.y = newY;
+	}
 
 	function draw(ctx) {
 		ctx.font = "10px Arial";
 		textDimensions = ctx.measureText(this.msg);
 
 		ctx.fillStyle = "#000";
-		ctx.fillRect(this.x - this.padding, this.y - this.padding, textDimensions.width + this.padding*2, this.height + this.padding);
+		ctx.fillRect(this.x - this.padding, this.y - this.padding, this.width + this.padding*2, this.height + this.padding);
 		ctx.stroke();
 
 		ctx.fillStyle = "#FFF";
-		ctx.fillText(this.msg, this.x, this.y+this.padding*2);
+		ctx.fillText(this.msg, this.x + this.width / 2 - textDimensions.width / 2, this.y+this.padding*2); // centered
 		ctx.stroke();
 
 		ctx.fillStyle = "#000";
@@ -37,7 +43,7 @@ function button(newX, newY, newMsg) {
 		// we'll set the height and width here
 		// The button will have to draw
 		// before it can be clicked anyways
-		this.width = textDimensions.width + 10; // 5 either side padding
+		//this.width = textDimensions.width + this.padding*2; // 5 either side padding
 	}
 
 	function clicked(newX, newY) {
